@@ -3,9 +3,11 @@ package com.java.bank.security;
 import com.java.bank.models.User;
 import org.springframework.security.core.GrantedAuthority;
 
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 public class UserDetail implements UserDetails {
@@ -18,36 +20,47 @@ public class UserDetail implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+//        return List.of();
+        return Collections.singletonList(new SimpleGrantedAuthority("USER"));
+
     }
 
     @Override
     public String getPassword() {
-        return "";
+        return this.user.getPassword();
     }
 
     @Override
     public String getUsername() {
-        return "";
+        return this.user.getUsername();
     }
 
     @Override
     public boolean isAccountNonExpired() {
-        return UserDetails.super.isAccountNonExpired();
+//        return UserDetails.super.isAccountNonExpired();
+        return true;
     }
 
     @Override
     public boolean isAccountNonLocked() {
-        return UserDetails.super.isAccountNonLocked();
+//        return UserDetails.super.isAccountNonLocked();
+        return true;
     }
+
 
     @Override
     public boolean isCredentialsNonExpired() {
-        return UserDetails.super.isCredentialsNonExpired();
+//
+        return true;
     }
 
     @Override
     public boolean isEnabled() {
-        return UserDetails.super.isEnabled();
+//        return UserDetails.super.isEnabled();
+        return true;
+    }
+
+    public User getUser() {
+        return this.user;
     }
 }
